  - Fixed a problem with modules not being loaded properly for admin stylesheets
  - Fixed a minor problem with microtinyconfig
  - Fixed a minor issue in event handlers.
  - Adds one more error check into MenuManager wrt to GetContent on inactive objects.
  - Fixes a problem with GetAllContent() which effects the parent dropdown stuff.
  - Fixes a problem with deleting inactive content.

Version 1.10 - Martinique
-----------------------------
Core - Bug Reports:
  - #5138 Module Manager often can't upgrade modules
  - #5853 server version not working with full Adodb and mysqli in systeminfo
  - #5994 SSL in admin is thwarted when root_url and ssl_url are populated
  - #6124 cms_utils::get_module  version check don't work
  - #6257 cms_selflink adding space
  - #6272 tiny mce adjustments fail (Translation problem)
  - #6278 NCleanGrey Admin Theme typo
  - #6284 CMSMailer system message 'mail not setup' link leads to login page (Translation problem)
  - #6322 wrong db query in SetUserTag method
  - #6374 Page alias not re-crated if alias deleted - old is used
  - #6386 cms_htmlenities in created_date & modified_date
  - #6436 MenuManager: wrong assignment of $node->depth
  - #6444 Calls to UNIX_TIMESTAMP SQL function which does not exist in Postgresql
  - #6464 Buttons in Backend not visible in IE9
  - #6465 can't delete text from the Page URL field
  - #6475 breadcrumbs can influence node tree
  - #6554 Mismatched DIV in edithtmlblob.php
  - #6585 Update jquery.ui.nestedSortable.js from 1.1.1 to 1.3.4
  - #6586 Only Admin can assign Additional Editors
  - #6637 Wrong check for memory_limit and output_buffering
  - #6647 cms_stylesheet media parameter is not working correctly
  - #6686 Missing check permission for Modify Any Page in admin/ listcontent.php
  - #6783 Possible injection when setting a preference
  - #6862 Notice: Undefined index: show_all in .../MenuManager/action.default.php on line 126
  - #6933 News module : no more fields aliases and FieldsByName